syntax = "proto3";

package api.palace.common;

import "palace/common/system_enum.proto";
import "palace/common/common_enum.proto";

option go_package = "github.com/aide-family/moon/pkg/api/palace/common;common";

message UserBaseItem {
  // User's login name
  string username = 1;
  // User's nickname
  string nickname = 2;
  // User's avatar URL
  string avatar = 3;
  // User's gender
  api.palace.common.Gender gender = 4;
  // User's unique identifier
  uint32 userId = 5;
}

message UserItem {
  // User's login name
  string username = 1;
  // User's nickname
  string nickname = 2;
  // User's avatar URL
  string avatar = 3;
  // User's gender
  api.palace.common.Gender gender = 4;
  // User's email address (encrypted)
  string email = 5;
  // User's phone number (encrypted)
  string phone = 6;
  // Remarks about the user
  string remark = 7;
  // User's position/role in the system
  api.palace.common.UserPosition position = 8;
  // User's status
  api.palace.common.UserStatus status = 9;
  // User's creation time
  string createdAt = 10;
  // User's last update time
  string updatedAt = 11;
  // User's unique identifier
  uint32 userId = 12;
}

message SystemRoleItem {
  // Unique identifier for the system role
  uint32 roleId = 1;
  // Name of the system role
  string name = 2;
  // Remarks about the system role
  string remark = 3;
  // Status of the system role
  api.palace.common.GlobalStatus status = 4;
  // Creation time of the system role
  string createdAt = 5;
  // Last update time of the system role
  string updatedAt = 6;
  // List of resources associated with the system role
  repeated MenuTreeItem resources = 7;
  // List of users assigned to the system role
  repeated UserBaseItem users = 8;
  UserBaseItem creator = 9;
}

message TeamBaseItem {
  // Unique identifier for the team
  uint32 teamId = 1;
  // Name of the team
  string name = 2;
  // Remarks about the team
  string remark = 3;
  // Logo URL of the team
  string logo = 4;
}

message TeamAuditItem {
  // Unique identifier for the team audit record
  uint32 teamAuditId = 1;
  // User information of the audit requester
  UserBaseItem user = 2;
  // Status of the team audit
  api.palace.common.TeamAuditStatus status = 3;
  // Reason for the audit result
  string reason = 4;
  // Creation time of the audit record
  string createdAt = 5;
  // Team information being audited
  TeamBaseItem team = 6;
  api.palace.common.TeamAuditAction action = 7;
}

message MenuTreeItem {
  // Unique identifier for the menu tree item
  uint32 menuId = 1;
  // Name of the menu tree item
  string name = 2;
  // menu path of the menu tree item
  string menuPath = 3;
  // api path
  string apiPath = 4;
  // Status of the menu tree item
  api.palace.common.GlobalStatus status = 5;
  // Icon of the menu tree item
  string menuIcon = 6;
  // children of the menu tree item
  repeated MenuTreeItem children = 7;
  // Type of the menu tree item
  api.palace.common.MenuType menuType = 8;
  // Category of the menu tree item
  api.palace.common.MenuCategory menuCategory = 9;
  // Process type of the menu tree item
  api.palace.common.MenuProcessType processType = 10;
  // Parent menu id
  uint32 parentId = 11;
  // rely on brother
  bool isRelyOnBrother = 12;
}
